# lens

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  COMPATIBILITY.md  EVALS.md  LIVE_ADAPTERS.md  METTA_ATOM_EXPORTS.md  ORIGINTRAIL_FIXTURES.md  REFERENCES.md  ROADMAP.md  index.html
examples/: activitystreams_collection.json  activitystreams_single.json  metta_atom_rows.json  origintrail_resolved_asset.json
notebooks/: 01_quickstart.ipynb  02_circuit_library.ipynb  03_p2p_sharing.ipynb  04_from_qiskit_pennylane.ipynb
src/knitweb_lens/: __init__.py  adapters.py  capabilities.py  cli.py  context.py  eval.py  prompts.py  pulse.py  reliability.py  retriever.py  rlm.py  server.py
src/knitweb_lens/quantum/: __init__.py  backend.py  cid.py  circuit.py  library.py  result.py  search.py  store.py
src/knitweb_lens/quantum/adapters/: __init__.py  cirq.py  pennylane.py  qasm.py  qiskit.py  tket.py
tests/: test_adapters.py  test_capabilities.py  test_cli.py  test_eval.py  test_prompts.py  test_pulse_contract.py  test_reliability.py  test_retriever.py  test_server.py
tests/fixtures/: activitystreams_export.json  origintrail_knowledge_asset.json  pulse_real_web_export.json
tests/quantum/: test_artifacts.py  test_quantum.py
tools/: generate_pulse_fixture.py
web/: index.html
